# arr-lang

./: .gitignore  .gitmodules  CMakeLists.txt  data.arr  dev.md  example1.arr  license  makefile  null.d  readme.md
include/: arrlang.c  arrlang.h  color.h  logger.h  meta.h
spec/: readme.md
src/: arrlang.c
